--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -170,8 +170,15 @@ MODAL HOC
   @apply flex flex-col;
 }
 
-.formik-input-container input {
+/* .formik-input-container input {
   @apply w-full border border-black py-2 px-2;
+} */
+.formik-input-container label {
+  @apply mb-2 block text-lg font-medium text-gray-900;
+}
+
+.formik-input-container input {
+  @apply w-full appearance-none rounded border py-2 px-3 leading-tight text-gray-700 shadow focus:shadow-md focus:outline-none;
 }
 
 .form-error {
@@ -188,8 +195,12 @@ MODAL HOC
   @apply bg-blue-700;
 }
 
-button {
+/* button {
   @apply btn btn-blue;
+} */
+
+.form-button {
+  @apply btn bg-blue-700 text-white;
 }
 
 /* SIDEBAR */
