--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -190,20 +190,20 @@ MODAL HOC
 ================
 */
 
-.formik-input-container {
+/* .formik-input-container {
   @apply flex flex-col;
-}
+} */
 
 /* .formik-input-container input {
   @apply w-full border border-black py-2 px-2;
 } */
-.formik-input-container label {
+/* .formik-input-container label {
   @apply mb-2 block text-lg font-medium text-gray-900;
 }
 
 .formik-input-container input {
   @apply w-full appearance-none rounded border py-2 px-3 leading-tight text-gray-700 shadow focus:shadow-md focus:outline-none;
-}
+} */
 
 .form-error {
   @apply text-red-600;
