--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -102,6 +102,9 @@ th {
 h1 {
   @apply mb-3 mt-1 text-center text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl;
 }
+h2 {
+  @apply mt-1 text-center font-bold md:text-3xl lg:text-4xl;
+}
 
 select {
   @apply block w-full rounded-lg border border-gray-600 bg-gray-700  p-2.5 text-sm text-white placeholder-gray-400 ring-blue-500;
@@ -120,7 +123,7 @@ select {
 
 input[type='text'],
 input[type='number'] {
-  @apply rounded-md bg-gray-300 text-black;
+  @apply rounded-md bg-gray-200 text-black;
 }
 
 input[type='date'] {
